feat: switch in directive & control flow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,12 @@
 
 <mat-menu #menuDirective="matMenu">
   <button mat-menu-item [routerLink]="['/directive/if']">If Condition</button>
+  <button mat-menu-item [routerLink]="['/directive/switch']">Switch Statement</button>
 </mat-menu>
 
 <mat-menu #menuControlFlow="matMenu">
   <button mat-menu-item [routerLink]="['/control-flow/if']">If Condition</button>
+  <button mat-menu-item [routerLink]="['/control-flow/switch']">Switch Statement</button>
 </mat-menu>
 
 <div class="content-wrapper">
