--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,11 +21,13 @@
 <mat-menu #menuDirective="matMenu">
   <button mat-menu-item [routerLink]="['/directive/if']">If Condition</button>
   <button mat-menu-item [routerLink]="['/directive/switch']">Switch Statement</button>
+  <button mat-menu-item [routerLink]="['/directive/for']">For Loop</button>
 </mat-menu>
 
 <mat-menu #menuControlFlow="matMenu">
   <button mat-menu-item [routerLink]="['/control-flow/if']">If Condition</button>
   <button mat-menu-item [routerLink]="['/control-flow/switch']">Switch Statement</button>
+  <button mat-menu-item [routerLink]="['/control-flow/for']">For Loop</button>
 </mat-menu>
 
 <div class="content-wrapper">
