feat: if and switch with directive and control flow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,12 +22,16 @@
   <button mat-menu-item [routerLink]="['/directive/if']">If Condition</button>
   <button mat-menu-item [routerLink]="['/directive/switch']">Switch Statement</button>
   <button mat-menu-item [routerLink]="['/directive/for']">For Loop</button>
+  <button mat-menu-item [routerLink]="['/directive/switch-with-type']">Switch with Types</button>
+  <button mat-menu-item [routerLink]="['/directive/if-with-type']">If with Types</button>
 </mat-menu>
 
 <mat-menu #menuControlFlow="matMenu">
   <button mat-menu-item [routerLink]="['/control-flow/if']">If Condition</button>
   <button mat-menu-item [routerLink]="['/control-flow/switch']">Switch Statement</button>
   <button mat-menu-item [routerLink]="['/control-flow/for']">For Loop</button>
+  <button mat-menu-item [routerLink]="['/control-flow/switch-with-type']">Switch with Types</button>
+  <button mat-menu-item [routerLink]="['/control-flow/if-with-type']">If with Types</button>
 </mat-menu>
 
 <div class="content-wrapper">
