feat: using place holder block

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,7 @@
 
 <mat-menu #menuDefer="matMenu">
   <button mat-menu-item [routerLink]="['/defer/idle']">Default (On Idle)</button>
+  <button mat-menu-item [routerLink]="['/defer/placeholder']">Placeholder</button>
 </mat-menu>
 
 <div class="content-wrapper">
