feat: add viewport trigger with deffer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,7 @@
 <mat-menu #menuDefer="matMenu">
   <button mat-menu-item [routerLink]="['/defer/idle']">Default (On Idle)</button>
   <button mat-menu-item [routerLink]="['/defer/placeholder']">Placeholder</button>
+  <button mat-menu-item [routerLink]="['/defer/viewport']">Viewport</button>
 </mat-menu>
 
 <div class="content-wrapper">
