--- a/src/app/defer/viewport/viewport.component.html
+++ b/src/app/defer/viewport/viewport.component.html
@@ -1,5 +1,6 @@
 <h1>Movies</h1>
-@defer(on idle) {
+<div class="spacer"></div>
+@defer(on viewport) {
 <app-movies></app-movies>
 } @placeholder {
 <span>Loading Movie list...</span>
