feat: add interaction to the differ

--- a/src/app/defer/placeholder/placeholder.component.html
+++ b/src/app/defer/placeholder/placeholder.component.html
@@ -1,6 +1,7 @@
 <h1>Movies</h1>
 @defer(on idle) {
 <app-movies></app-movies>
+<!-- placeholder will be shown until the trigger initiates -->
 } @placeholder {
-<span>Loading Movie list...</span>
+<span>Movie list placeholder!</span>
 }
