--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,7 @@
   <button mat-menu-item [routerLink]="['/defer/idle']">Default (On Idle)</button>
   <button mat-menu-item [routerLink]="['/defer/placeholder']">Placeholder</button>
   <button mat-menu-item [routerLink]="['/defer/viewport']">Viewport</button>
+  <button mat-menu-item [routerLink]="['/defer/interaction']">Interaction</button>
 </mat-menu>
 
 <div class="content-wrapper">
