feat: interaction with button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,7 @@
   <button mat-menu-item [routerLink]="['/defer/placeholder']">Placeholder</button>
   <button mat-menu-item [routerLink]="['/defer/viewport']">Viewport</button>
   <button mat-menu-item [routerLink]="['/defer/interaction']">Interaction</button>
+  <button mat-menu-item [routerLink]="['/defer/interaction-with-button']">Interaction with Template Reference</button>
 </mat-menu>
 
 <div class="content-wrapper">
