feat: hover interaction trigger

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,7 @@
   <button mat-menu-item [routerLink]="['/defer/viewport']">Viewport</button>
   <button mat-menu-item [routerLink]="['/defer/interaction']">Interaction</button>
   <button mat-menu-item [routerLink]="['/defer/interaction-with-button']">Interaction with Template Reference</button>
+  <button mat-menu-item [routerLink]="['/defer/hover']">Hover</button>
 </mat-menu>
 
 <div class="content-wrapper">
