--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,7 @@
   <button mat-menu-item [routerLink]="['/defer/interaction']">Interaction</button>
   <button mat-menu-item [routerLink]="['/defer/interaction-with-button']">Interaction with Template Reference</button>
   <button mat-menu-item [routerLink]="['/defer/hover']">Hover</button>
+  <button mat-menu-item [routerLink]="['/defer/timer']">Timer</button>
 </mat-menu>
 
 <div class="content-wrapper">
