--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,7 @@
   <button mat-menu-item [routerLink]="['/defer/interaction-with-button']">Interaction with Template Reference</button>
   <button mat-menu-item [routerLink]="['/defer/hover']">Hover</button>
   <button mat-menu-item [routerLink]="['/defer/timer']">Timer</button>
+  <button mat-menu-item [routerLink]="['/defer/prefetch']">Prefetch</button>
 </mat-menu>
 
 <div class="content-wrapper">
