--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,7 @@
   <button mat-menu-item [routerLink]="['/defer/hover']">Hover</button>
   <button mat-menu-item [routerLink]="['/defer/timer']">Timer</button>
   <button mat-menu-item [routerLink]="['/defer/prefetch']">Prefetch</button>
+  <button mat-menu-item [routerLink]="['/defer/when']">When</button>
 </mat-menu>
 
 <div class="content-wrapper">
