feat: prefetch when

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,6 +45,7 @@
   <button mat-menu-item [routerLink]="['/defer/timer']">Timer</button>
   <button mat-menu-item [routerLink]="['/defer/prefetch']">Prefetch</button>
   <button mat-menu-item [routerLink]="['/defer/when']">When</button>
+  <button mat-menu-item [routerLink]="['/defer/prefetch-when']">Prefetch When</button>
 </mat-menu>
 
 <div class="content-wrapper">
