feat: multiple triggers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,6 +46,7 @@
   <button mat-menu-item [routerLink]="['/defer/prefetch']">Prefetch</button>
   <button mat-menu-item [routerLink]="['/defer/when']">When</button>
   <button mat-menu-item [routerLink]="['/defer/prefetch-when']">Prefetch When</button>
+  <button mat-menu-item [routerLink]="['/defer/multiple-triggers']">Multiple Triggers</button>
 </mat-menu>
 
 <div class="content-wrapper">
